--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -16,26 +16,6 @@
         tools:text="20. Jan" />
 
     <TextView
-        android:id="@+id/startTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/startDate"
-        app:layout_constraintStart_toStartOf="@+id/startDate"
-        app:layout_constraintTop_toBottomOf="@+id/startDate"
-        tools:text="16:00" />
-
-    <TextView
-        android:id="@+id/endTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/startDate"
-        app:layout_constraintStart_toStartOf="@+id/startDate"
-        app:layout_constraintTop_toBottomOf="@+id/startTime"
-        tools:text="23:00" />
-
-    <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,30 +24,98 @@
         app:layout_constraintTop_toTopOf="@+id/startDate"
         tools:text="Example Title" />
 
+
+    <TextView
+        android:id="@+id/startTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/startDate"
+        app:layout_constraintStart_toStartOf="@+id/startDate"
+        app:layout_constraintTop_toBottomOf="@+id/startDate"
+        tools:text="16:00"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/endTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/startTime"
+        app:layout_constraintTop_toBottomOf="@+id/startTime"
+        tools:text="23:00"
+        android:visibility="invisible"/>
+
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_location"
+        app:drawableStartCompat="@drawable/ic_location"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:text="Best location ever" />
+        tools:text="Best location ever"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/createdBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_user"
+        app:drawableStartCompat="@drawable/ic_user"
         app:layout_constraintStart_toStartOf="@+id/location"
         app:layout_constraintTop_toBottomOf="@+id/location"
-        tools:text="User 69" />
+        tools:text="User 69"
+        android:visibility="invisible"/>
 
-    <View
+
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/eventItemExpandableLayout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0dp"
+        app:el_duration="300"
+        app:el_expanded="false"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/black"
-        app:layout_constraintTop_toBottomOf="parent" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="100"
+            android:baselineAligned="false">
+
+            <FrameLayout
+                android:id="@+id/timeFragmentContainer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="20" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="80"
+                android:orientation="vertical">
+
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/eventItemTabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal" />
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/eventItemViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
