--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -98,7 +98,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_weight="80"
                 android:orientation="vertical">
 
@@ -112,7 +112,7 @@
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/eventItemViewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="150dp" />
             </LinearLayout>
         </LinearLayout>
 
